force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/ucinn_ascendv2__Membership_Level__c.object-meta.xml
<CustomObject>
    <description>The various levels defined for a giving society.</description>
    <label>Membership Level</label>
    <nameField>
        <label>Membership Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>