force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used for ISUF</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>