force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/Level_Code__c.field-meta.xml
<CustomField>
    <fullName>Level_Code__c</fullName>
    <description>For Data Migration Use</description>
    <externalId>true</externalId>
    <label>Level Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>