force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_ascendv2__Eligibility__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Eligibility__c</fullName>
    <description>Details of how a member can be eligible</description>
    <label>Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>