force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_ascendv2__Giving_Society__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_Society__c</fullName>
    <label>Giving Society</label>
    <referenceTo>ucinn_ascendv2__Giving_Society__c</referenceTo>
    <relationshipLabel>Membership Levels</relationshipLabel>
    <relationshipName>Membership_Levels_Giving_Society</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>