force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_ascendv2__Minimum__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Minimum__c</fullName>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>