force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_ascendv2__Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>