force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_ascendv2__School_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School_Formula__c</fullName>
    <formula>TEXT( ucinn_ascendv2__Giving_Society__r.ucinn_ascendv2__School__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>