force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_portal_Current_Level_Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Current_Level_Min_Amount__c</fullName>
    <description>Amount needed for Renewal</description>
    <label>Current Level Min Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>