force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_portal_Next_Level_Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Next_Level_Min_Amount__c</fullName>
    <description>This is the minimum amount for the next level</description>
    <inlineHelpText>This is the minimum amount for the next level</inlineHelpText>
    <label>Next Level Min Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>