force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_portal_Next_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Next_Membership_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Membership Level</label>
    <referenceTo>ucinn_ascendv2__Membership_Level__c</referenceTo>
    <relationshipLabel>Membership Levels</relationshipLabel>
    <relationshipName>ucinn_portal_Next_Membership_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>