force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/fields/ucinn_portal_Summary__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>