force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/listViews/All_Membership_Levels.listView-meta.xml
<ListView>
    <fullName>All_Membership_Levels</fullName>
    <columns>NAME</columns>
    <columns>Level_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Membership Levels</label>
</ListView>