force-app/main/default/objects/ucinn_ascendv2__Membership_Level__c/listViews/Campanile_Society_Levels.listView-meta.xml
<ListView>
    <fullName>Campanile_Society_Levels</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Giving_Society__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Giving_Society__c</field>
        <operation>contains</operation>
        <value>Campanile</value>
    </filters>
    <label>Campanile Society Levels</label>
</ListView>